--- a/smart-rental-backend/src/main/resources/application.properties
+++ b/smart-rental-backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/smartrental?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/smartrental?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Ashwin@8185
+spring.datasource.username=${MYSQLUSER:root}
+spring.datasource.password=${MYSQLPASSWORD:Ashwin@8185}
 
 # JPA Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Server Configuration
-server.port=8081
+server.port=${PORT:8080}
 
 # CORS Configuration
 spring.web.cors.allowed-origins=http://localhost:5173,http://localhost:5174
