--- a/smart-rental-backend/Dockerfile
+++ b/smart-rental-backend/Dockerfile
@@ -1,23 +1,16 @@
-# Use official OpenJDK replacement
 FROM eclipse-temurin:17-jdk-jammy
 
 WORKDIR /app
 
-# Copy Maven wrapper and pom.xml first (for Docker cache)
-COPY mvnw pom.xml ./
-COPY .mvn/ .mvn/
+# Install Maven
+RUN apt-get update && apt-get install -y maven && rm -rf /var/lib/apt/lists/*
 
-# Download dependencies
-RUN chmod +x mvnw && ./mvnw dependency:go-offline -B
-
-# Copy source code
-COPY src ./src
+# Copy project files
+COPY . .
 
 # Build the application
-RUN ./mvnw clean package -DskipTests
+RUN mvn clean package -DskipTests
 
-# Expose Spring Boot port
 EXPOSE 8080
 
-# Run the application
 CMD ["java", "-jar", "target/smart-rental-backend-1.0.0.jar"]
