--- a/smart-rental-backend/src/main/resources/application.properties
+++ b/smart-rental-backend/src/main/resources/application.properties
@@ -1,18 +1,28 @@
-# MySQL Database Configuration
-spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/smartrental?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC}
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${MYSQLUSER:root}
-spring.datasource.password=${MYSQLPASSWORD:Ashwin@8185}
+# ===============================
+# Database Configuration
+# ===============================
 
-# JPA Configuration
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# JPA / Hibernate
+# ===============================
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
-# Server Configuration
+# ===============================
+# Server (Railway compatible)
+# ===============================
+
 server.port=${PORT:8080}
 
-# CORS Configuration
-spring.web.cors.allowed-origins=https://full-stack-dbo8zgdlv-ashwins-projects-3e6e9842.vercel.app,http://localhost:5173,http://localhost:5174
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
+# ===============================
+# Logging (optional but helpful)
+# ===============================
+
+logging.level.org.springframework=INFO
