--- a/smart-rental-backend/src/main/resources/application.properties
+++ b/smart-rental-backend/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 # ===============================
 # Database Configuration
 # ===============================
-
 spring.datasource.url=${MYSQL_URL}
 spring.datasource.username=${MYSQLUSER}
 spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# IMPORTANT: Do NOT fail app startup if DB is slow
+spring.datasource.hikari.initialization-fail-timeout=0
+
 # ===============================
 # JPA / Hibernate
 # ===============================
-
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
@@ -18,11 +19,9 @@ spring.jpa.show-sql=false
 # ===============================
 # Server (Railway compatible)
 # ===============================
-
 server.port=${PORT:8080}
 
 # ===============================
-# Logging (optional but helpful)
+# Logging
 # ===============================
-
 logging.level.org.springframework=INFO
